--- a/app/static/room.html
+++ b/app/static/room.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <title>RollTheDice – Spiel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/static/style.css" />
+  <!-- KORREKT: room.html liegt unter /static, daher relative Pfade -->
+  <link rel="stylesheet" href="style.css" />
   <style>
     /* Kopfbereich mit Spielname + Spielerbubbles */
     .room-header {
@@ -56,8 +57,8 @@
   <div id="scoreOut"></div>
 
   <!-- Scripts: KEINE Module, beide mit defer; Reihenfolge: scoreboard vor game -->
-  <script src="/static/scoreboard.js" defer></script>
-  <script src="/static/game.js" defer></script>
+  <script src="scoreboard.js" defer></script>
+  <script src="game.js" defer></script>
 
   <!-- DOM-Spiegel: klont nur Titel/Badges/Chips nach oben; #scoreOut bleibt unberührt -->
   <script>
