[IMP]working 4 players now (2v2), more imps

--- a/app/static/room.html
+++ b/app/static/room.html
@@ -38,6 +38,7 @@
     /* Nur Optik: alten Titel in der Renderfläche ausblenden */
     ._migrated-title { display: none !important; }
   </style>
+  <button id="backToLobbyBtn" class="small" style="margin-left:auto;">Zurück zur Lobby</button>
 </head>
 <body>
 
