--- a/app/static/room.html
+++ b/app/static/room.html
@@ -72,7 +72,7 @@
 
   <!-- Scripts: zuerst scoreboard, dann game -->
   <script src="scoreboard.js" defer></script>
-  <script src="game.js" defer></script>
+  <script type="module" src="room.js" defer></script>
   <script src="/static/emoji.js"></script>
   <script>
   if ('serviceWorker' in navigator) {
