--- a/app/static/room.html
+++ b/app/static/room.html
@@ -4,41 +4,17 @@
   <meta charset="utf-8" />
   <title>RollTheDice – Spiel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- room.html liegt unter /static, daher reicht der relative Pfad -->
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Kopfbereich mit Spielname + Spielerbubbles + Back-Button */
     .room-header {
-      display: flex;
-      align-items: center;
-      gap: .6rem;
-      margin: .8rem 1rem .3rem;
-      flex-wrap: wrap;
+      display: flex; align-items: center; gap: .6rem;
+      margin: .8rem 1rem .3rem; flex-wrap: wrap;
     }
     .room-header .spacer { flex: 1 1 auto; }
-    #roomGameName {
-      margin: 0;
-      font-size: 1.28rem;
-      font-weight: 800;
-      letter-spacing: .2px;
-    }
-    #roomPlayerBubbles {
-      display: inline-flex;
-      gap: .35rem;
-      flex-wrap: wrap;
-    }
-
-    /* Statuszeile (Turn/Ansage) über den Tabellen */
-    .room-statusline {
-      display: flex;
-      align-items: center;
-      gap: .5rem;
-      margin: 0 1rem .6rem;
-      flex-wrap: wrap;
-    }
-
+    #roomGameName { margin: 0; font-size: 1.28rem; font-weight: 800; letter-spacing: .2px; }
+    #roomPlayerBubbles { display: inline-flex; gap: .35rem; flex-wrap: wrap; }
+    .room-statusline { display: flex; align-items: center; gap: .5rem; margin: 0 1rem .6rem; flex-wrap: wrap; }
     #scoreOut { margin: 0 1rem 1rem; position: relative; }
-    /* Link zu den Spielregeln (neuer Tab) */
     .rules-link{ display:inline-block; padding:.25rem .5rem; border:1px solid var(--border); border-radius:6px; text-decoration:none; color:#333; background:#f8f8f8; }
     .rules-link:hover{ background:#eee; }
     .rules-link.small{ font-size:.85rem; }
@@ -46,13 +22,13 @@
 </head>
 <body>
 
-  <!-- Header: Spielname + Spieler-Badges + Zurück -->
+  <!-- Header -->
   <div class="room-header">
     <h1 id="roomGameName"></h1>
     <div id="roomPlayerBubbles"></div>
     <div class="spacer"></div>
     <a href="rules.html" target="_blank" rel="noopener" class="small buttonlike">Spielregeln</a>
-    <button id="backToLobbyBtn" class="small">Zurück zur Lobby</button>
+    <button id="backToLobbyBtn" class="small" onclick="location.href='/static/index.html'">Zurück zur Lobby</button>
   </div>
 
   <!-- Statuszeile -->
@@ -60,27 +36,28 @@
 
   <!-- Inhalt aus scoreboard.js (Würfel, Buttons, Tabellen) -->
   <div id="scoreOut"></div>
+
   <!-- Chat -->
   <div id="chatPanel" class="chat-panel">
     <h3 style="margin:.6rem 0;">Chat</h3>
-    <div id="chatBox" class="chat-box" style="max-height:240px; overflow:auto; border:1px solid var(--border,#e0e0e0); border-radius:.5rem; padding:.5rem; background:#fff;"></div>
-    <div class="chat-input-row" style="display:flex; gap:.5rem; margin-top:.5rem;">
-      <input id="chatInput" type="text" placeholder="Nachricht eingeben …" style="flex:1; padding:.45rem .6rem; border:1px solid var(--border,#e0e0e0); border-radius:.45rem;">
+    <div id="chatBox" class="chat-box"></div>
+    <div class="chat-input-row">
+      <input id="chatInput" type="text" placeholder="Nachricht eingeben …">
       <button id="chatSend">Senden</button>
     </div>
   </div>
 
-  <!-- Scripts: zuerst scoreboard, dann game -->
+  <!-- Scripts: zuerst scoreboard, dann room (als ES‑Modul!) -->
   <script src="scoreboard.js" defer></script>
-  <script type="module" src="room.js" defer></script>
+  <script type="module" src="room.js"></script>
   <script src="/static/emoji.js"></script>
   <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/static/sw.js')
-        .catch(err => console.warn('SW registration failed:', err));
-    });
-  }
-</script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/static/sw.js')
+          .catch(err => console.warn('SW registration failed:', err));
+      });
+    }
+  </script>
 </body>
 </html>
