[ADD]added manifest for pwa registration

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>Würfler – Lobby</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#000000">
   <!-- FIX: relative auf die echte CSS-Datei unter /static/ -->
   <link rel="stylesheet" href="/static/style.css">
-
   <style>
     .wrap { max-width: 980px; margin: 1.2rem auto; }
     .card { background:#fff; border:1px solid var(--border,#e0e0e0); border-radius:12px; padding:1rem; margin:.8rem 0; }
@@ -307,7 +307,7 @@
   <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/static/sw.js')
+      navigator.serviceWorker.register('/sw.js')
         .catch(err => console.warn('SW registration failed:', err));
     });
   }
