--- a/app/static/room.html
+++ b/app/static/room.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>RollTheDice – Spiel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/static/style.css?v=13">
   <style>
     .room-header {
       display: flex; align-items: center; gap: .6rem;
