--- a/app/static/room.html
+++ b/app/static/room.html
@@ -6,15 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/static/style.css?v=13">
   <style>
-    .room-header {
-      display: flex; align-items: center; gap: .6rem;
-      margin: .8rem 1rem .3rem; flex-wrap: wrap;
+    /* Header & Status zentrieren – gleiche Breite wie Score/Chat */
+    .room-header{
+      display:flex; align-items:center; gap:.6rem; flex-wrap:wrap;
+      margin:.8rem auto .3rem;
+      max-width: calc(2 * var(--card-w) + var(--cards-gap));
+      padding:0 1rem;
     }
-    .room-header .spacer { flex: 1 1 auto; }
-    #roomGameName { margin: 0; font-size: 1.28rem; font-weight: 800; letter-spacing: .2px; }
-    #roomPlayerBubbles { display: inline-flex; gap: .35rem; flex-wrap: wrap; }
-    .room-statusline { display: flex; align-items: center; gap: .5rem; margin: 0 1rem .6rem; flex-wrap: wrap; }
-    #scoreOut { margin: 0 1rem 1rem; position: relative; }
+    .room-header .spacer{ flex:1 1 auto; }
+    #roomGameName{ margin:0; font-size:1.28rem; font-weight:800; letter-spacing:.2px; }
+    #roomPlayerBubbles{ display:inline-flex; gap:.35rem; flex-wrap:wrap; }
+
+    .room-statusline{
+      display:flex; align-items:center; gap:.5rem; flex-wrap:wrap;
+      margin:0 auto .6rem;
+      max-width: calc(2 * var(--card-w) + var(--cards-gap));
+      padding:0 1rem;
+    }
+
+    /* ScoreOut NICHT mehr links verschieben – zentriert lassen */
+    #scoreOut{ margin:0 auto 1rem; position:relative; }
+
     .rules-link{ display:inline-block; padding:.25rem .5rem; border:1px solid var(--border); border-radius:6px; text-decoration:none; color:#333; background:#f8f8f8; }
     .rules-link:hover{ background:#eee; }
     .rules-link.small{ font-size:.85rem; }
@@ -49,8 +61,8 @@
 
   <!-- Scripts: zuerst scoreboard, dann room (als ES‑Modul!) -->
   <script src="scoreboard.js" defer></script>
-  <script type="module" src="room.js"></script>
   <script src="/static/emoji.js"></script>
+  <script type="module" src="room.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
